Fix a tablet layout issue

--- a/webroot/static/styles/base.css
+++ b/webroot/static/styles/base.css
@@ -1171,10 +1171,6 @@ main {
   overflow: hidden;
 }
 
-[data-device="mobile-tablet"]:root #tabpanel-home > * > div {
-  overflow: visible;
-}
-
 [itemtype$="Bug"] > header {
   box-sizing: padding-box;
   border-width: .1rem 0;
@@ -1378,10 +1374,13 @@ main {
 }
 
 [data-device="mobile-tablet"]:root #home-preview-bug > header {
-  top: -4rem;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: auto;
   border-width: 0;
   padding: 0;
-  width: 100%;
+  width: 60%;
   height: 4rem;
   color: var(--application-header-foreground-color);
   background-color: var(--application-header-background-color);
